# tp_advanced_cpp_course

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  PreLoad.cmake  README.md  apply_format.sh
ci/hw1/: build.sh  linters.sh
ci/hw2/: build.sh  linters.sh
ci/install/: linters.sh
ci/linters/: run_cppcheck.sh  run_cpplint.sh
cmake/: common.cmake
cmake/toolchain/: clang_13_host.cmake
entrance_task/: CMakeLists.txt  Makefile
entrance_task/include/: stringbase.h  stringhelper.h
entrance_task/sbase/: CMakeLists.txt  main.cpp
entrance_task/sbaselib/: CMakeLists.txt
entrance_task/sbaselib/include/: stringbase.h  stringhelper.h
entrance_task/sbaselib/src/: stringbase.cpp  stringhelper.cpp
entrance_task/src/: main.cpp  stringbase.cpp  stringhelper.cpp
hw1/: CMakeLists.txt  README.md
hw1/include/: pipe.h  process.h
hw1/processlib/include/: ireadable.h  iwritable.h  pipe.h  process.h
hw1/processlib/src/: pipe.cpp  process.cpp
hw1/samples/echo-server/: CMakeLists.txt
hw1/samples/echo-server/src/: main.cpp
hw1/src/: main.cpp  pipe.cpp  process.cpp
hw1_process/include/: iwritable.h  pipe.h
hw1_process/samples/: CMakeLists.txt
hw1_process/src/: pipe.cpp
hw1_processlib/: CMakeLists.txt  README.md
hw1_processlib/include/: ireadable.h  iwritable.h  pipe.h  process.h
hw1_processlib/processlib/: CMakeLists.txt
hw1_processlib/processlib/include/: process.h
hw1_processlib/samples/echo-server/: CMakeLists.txt
hw1_processlib/samples/echo-server/src/: main.cpp
hw1_processlib/src/: pipe.cpp  process.cpp
hw2/: README.md
hw2/loglib/include/: baselogger.h  filelogger.h  logger.h  stderrlogger.h  stdoutlogger.h
hw2/loglib/src/: baselogger.cpp  filelogger.cpp  logger.cpp  stderrlogger.cpp  stdoutlogger.cpp
hw2_log/: CMakeLists.txt
hw2_log/include/: baselogger.h  logger.h  loglib.h  stdoutlogger.h
hw2_log/src/: logger.cpp
hw2_log/tests/: CMakeLists.txt  file_logger.cpp  stderr_logger.cpp  stdout_logger.cpp
hw2_loglib/: CMakeLists.txt  README.md
hw2_loglib/examples/demo/src/: main.cpp
hw2_loglib/include/: baselogger.h  exceptions.h  filelogger.h  globalapi.h  logger.h  loglevel.h  loglib.h  stderrlogger.h  stdoutlogger.h
hw2_loglib/include/loglib/: baselogger.h  exceptions.h  filelogger.h  globalapi.h  logger.h  loglevel.h  loglib.h  stderrlogger.h  stdoutlogger.h
hw2_loglib/samples/: CMakeLists.txt
hw2_loglib/samples/demo/: CMakeLists.txt
hw2_loglib/samples/demo/src/: main.cpp
hw2_loglib/src/: baselogger.cpp  filelogger.cpp  logger.cpp  stderrlogger.cpp  stdoutlogger.cpp
hw2_loglib/tests/: CMakeLists.txt  file_logger.cpp  loglib_test.cpp  stderr_logger.cpp  stdout_logger.cpp  todo.txt
hw2_loglib/unit_tests/: CMakeLists.txt  loglib_test.cpp
hw3_tcplib/: README.md
hw4_async_server/: README.md
hw5_shmem/: README.md
hw6_http_framework/: README.md
hw7_file_search/: README.md
linters/: run_cppcheck.sh
project/: CMakeLists.txt
project/include/: process.h  tsv.h
project/src/: main.cpp  pipe.cpp  process.cpp  tsv.cpp
